Tarea corregida. Refactor EjemploHilosThread: sustituido código repetitivo por bucle y array para crear y gestionar los 8 hilos; mensajes del hilo principal unificados.