@@ -3,11 +3,13 @@ package Ej01Threads;
 public class MiTareaThreads extends Thread {
     public void run() {
         for (int i=1; i<=5; i++){
-            System.out.println("Hilo" + Thread.currentThread().getId() + " : Contador " + i);
+            // getId() deprecated
+            // System.out.println("Hilo" + Thread.currentThread().getId() + " : Contador " + i);
+            System.out.println("Soy el hilo " + currentThread().threadId() + " y ejecuto el contador " + i);
             try{
                 Thread.sleep(1000);
             } catch (InterruptedException e) {
-                e.printStackTrace();
+                throw new RuntimeException(e);
             }
         }
     }
